mlruns/0/a6a0c184a83441e5af2e2a736e2324a5/params/pipeline.error

---------------------------------------------------------------------------
Exception encountered at "In [12]":
  Cell In[12], line 4
    f.write("<h1>Dashboard Final – Sentimento x Ibovespa</h1>
            ^
SyntaxError: unterminated string literal (detected at line 4)

